[FIXED] service bug